<resources>
    <string name="app_name">REMOTE CONTROLLER</string>
    <string name="buttonLeftText">SX Click</string>
    <string name="buttonRightText">DX Click</string>
    <string name="txtIPAddressHint">Digitare l IP del server</string>
    <string name="txtServerPortHint">Digitare la porta del server</string>
    <string name="spnModeValues">Selezionare la modalità</string>
    <string name="txtSpeedHint">Digitare la velocità</string>
    <string name="txtResolutionWidthHint">Digitare la risoluzione (larghezza)</string>
    <string name="txtResolutionHeightHint">Digitare la risoluzione (altezza)</string>
    <string name="tbShowCoordinatesHint">Mostra coordinate</string>
    <string name="buttonSettingsSave">Salva</string>
    <string name="buttonSettingsExit">Esci</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="A">a</string>
    <string name="B">b</string>
    <string name="C">c</string>
    <string name="D">d</string>
    <string name="E">e</string>
    <string name="F">f</string>
    <string name="G">g</string>
    <string name="H">h</string>
    <string name="I">i</string>
    <string name="J">j</string>
    <string name="K">k</string>
    <string name="L">l</string>
    <string name="M">m</string>
    <string name="N">n</string>
    <string name="O">o</string>
    <string name="P">p</string>
    <string name="Q">q</string>
    <string name="R">r</string>
    <string name="S">s</string>
    <string name="T">t</string>
    <string name="U">u</string>
    <string name="V">v</string>
    <string name="W">w</string>
    <string name="X">x</string>
    <string name="Y">y</string>
    <string name="Z">z</string>
    <string name="point">.</string>
    <string name="colon">:</string>
    <string name="comma">,</string>
    <string name="semicolon">;</string>
    <string name="SHIFT">SHIFT</string>
    <string name="ENTER">ENTER</string>
    <string name="BACKSPACE">BACKSPACE</string>
    <string name="exclamation">!</string>
    <string name="question">\?</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="SPACE">SPACE</string>
    <string name="coordinates">Qui compariranno le coordinate</string>
    <string name="lessthan">&lt;</string>
    <string name="morethan">&gt;</string>
    <string-array name="spnModeValues">
        <item>Touch-pad</item>
        <item>Direct</item>
    </string-array>
</resources>