<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!--:layout_height="?attr/actionBarSize"


    headerLayout="@layout/nav_header"
            app:menu="@menu/drawer_view"
    -->


    <!--
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                android:visibility="gone"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </FrameLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start" />

    </androidx.drawerlayout.widget.DrawerLayout>
-->


    <LinearLayout
        android:id="@+id/ToolbarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/homeToolbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/keyboard">

            <!-- Qui bisogna modificare il tipo nel main (immagino)
                 visto che si aspetta un button e non un image button
                 per i settaggi
            -->

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="arial"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@string/app_name" />

            <ImageButton
                android:id="@+id/btnSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/SETTINGS"
                android:src="@drawable/ic_action_settings"
                tools:ignore="TouchTargetSizeCheck" />

        </Toolbar>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/subLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <View
            android:id="@+id/viewMousePad"
            android:layout_weight="0.8"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:background="@color/black"
            android:layout_gravity="top"
            android:text="" />

        <LinearLayout
            android:id="@+id/subSubLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="false">

            <Button
                android:id="@+id/buttonLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:padding="1dp"
                android:gravity="center"
                android:background="@color/keyboard"
                android:text="@string/buttonLeftText" />

            <Button
                android:id="@+id/buttonRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:padding="1dp"
                android:gravity="center"
                android:background="@color/keyboard"
                android:text="@string/buttonRightText" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtCoordinates"
            android:layout_weight="0.2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:hint="@string/coordinates" />
    </LinearLayout>

    <include
        android:id="@+id/innerLayout"
        layout="@layout/activity_keyboard" />

</LinearLayout>